SC-3768: fix for active/inactive movement shifting

--- a/sugarcrm/styleguide/less/sugar-specific/datatables.less
+++ b/sugarcrm/styleguide/less/sugar-specific/datatables.less
@@ -1037,7 +1037,7 @@ table th.nosort span:after {
       }
       .fa {
         margin-right: 5px;
-        margin-left: -20px;
+        margin-left: -22px;
       }
     }
     li {
