--- a/sugarcrm/styleguide/less/sugar-specific/rtl.less
+++ b/sugarcrm/styleguide/less/sugar-specific/rtl.less
@@ -819,9 +819,8 @@ html.rtl {
             text-align: right;
             padding-right: 30px;
             padding-left: 10px;
-
             .fa {
-              margin-right: -20px;
+              margin-right: -22px;
               margin-left: 5px;
             }
         }
